Enable modernizer in restconf-nb-bierman02
Clean up violations and flip the switch.

Change-Id: I63f315fe0aad67e0591c830ff0dff75069e4e18f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>